<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsFragment">


    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/headerColour"
        android:textSize="36dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/appLogo"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/app_title"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_contact_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/shopLocations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_shop_locations"
        app:layout_constraintStart_toEndOf="@+id/contactUs"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/app_description"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_join_our_social_medias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUs" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/action_about_us"
        android:textColor="@color/headerColour"
        android:textSize="34dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/FBbutton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/Inbutton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/FBbutton"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/Tbutton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/Inbutton"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/Ybutton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/Tbutton"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_copy_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FBbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>
